# rust-project-template

./: .gitignore  Cargo.toml  Dockerfile  LICENSE_MIT  Makefile.toml  README.md  compose.yml  docker-compose.yml
.circleci/: config.yml
shared/: Cargo.toml
shared/src/: errors.rs  lib.rs  logger.rs
