[package]
edition.workspace = true
license.workspace = true
name = "app"
publish.workspace = true
version.workspace = true

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["shared"]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
publish = false
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
derive-new = "0.7.0"
indicatif = "0.18.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shared = { path = "./shared" }
strum = { version = "0.27.2", features = ["derive"] }
test-log = { version = "0.2.19", features = ["trace"] }
tracing = { version = "0.1.43", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
thiserror = "2.0.17"

[dependencies]
shared = { workspace = true }
tracing = { workspace = true }
test-log = { workspace = true }
